samples/bad5.decaf
void main() {
     int a;
     int b;
 
     b = a = 10;
     a[] = NewArray(4, int);
}
